# auracle-desktop

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODEMAP.md  CONTRIBUTING.md  DESIGN.md  LAUNCHER_DESIGN_SYSTEM.md  LAUNCHER_SHELL_REPORT.md  LAUNCHER_UI_QA.md  LAUNCHER_WORKFLOW_REPORT.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: gitleaks.yml  pr.yml  release.yml
docs/: CSP-REVIEW.md  HOUSTON-FORGE-API.md  LAUNCHER-REDESIGN-PRD.md  MCP-SIDECAR.md  SETTINGS-AND-CONVEYOR-BELT-PRD.md
docs/ci-templates/: README.md  gitleaks.yml  pr.yml  release.yml
scripts/: gen-icons.sh  setup-updater-keys.sh
src/: App.tsx  app.js  index.html  main.tsx
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth_device.rs  broker_bridge.rs  broker_connections.rs  broker_stream.rs  cert_trust.rs  dashboards.rs  data_keys.rs  docker.rs  engine_auth.rs  forge.rs  github_auth.rs  healthcheck.rs  ibeam.rs  ibkr_gateway.rs  ibkr_login.rs  ide_update.rs  installer.rs  keychain.rs  mcp_sidecar.rs  mod.rs  pair.rs  preflight.rs  scheduled_update.rs  secret_store.rs  settings.rs  strategy.rs  tray.rs  update.rs  view.rs  workspace.rs
src/components/: AuracleGlyph.tsx  Coachmark.tsx  CommandPalette.tsx  ConfirmRow.tsx  Flame.tsx  HubSurfaces.tsx  IncidentCard.tsx  InspectorHost.tsx  LifecycleInspector.tsx  PairPhoneInspector.tsx  SetupHint.tsx  Shell.tsx  ShellBackground.tsx  StandbyHome.tsx  SupervisionInspector.tsx  Tutorial.tsx
src/components/forge/: ChatPanel.tsx  DiffModal.tsx  Editor.tsx  FileTree.tsx  ForgeTopBar.tsx  LifecycleBelt.tsx  NewStrategyModal.tsx  PreviewPane.tsx
src/components/forge/dashboard/: BarChart.tsx  CandlestickChart.tsx  DataTable.tsx  KpiGrid.tsx  LineChart.tsx  NotesMd.tsx  OptionChainTable.tsx  PayoffDiagram.tsx  TickersGrid.tsx  WidgetErrorBoundary.tsx  WidgetRenderer.tsx  types.ts
src/components/ui/: canvas-reveal-effect.tsx  sign-in-flow-1.tsx
src/lib/: aggregator.test.ts  aggregator.ts  commands.test.ts  commands.ts  connections.test.ts  connections.ts  hub.ts  intelligence.ts  lifecycle.ts  onboarding.test.ts  onboarding.ts  settings.tsx  tauri.ts  useEngineState.ts
src/styles/: app.css
src/views/: BrokerConnections.tsx  Dashboard.tsx  Forge.tsx  ForgeAgent.tsx  IbeamSetup.tsx  IbkrConnect.tsx  Onboarding.tsx  Settings.tsx  dashboard.js  diagnostics.js  logs.js  onboarding.js  settings.js
