# Auracle Desktop Launcher — Tauri shell that wraps the Auracle
# Docker Compose stack. Rust core surface is intentionally tiny:
# wraps `docker compose` CLI, polls Houston's /healthz, manages
# the system tray icon, and ships an auto-updater.

[package]
name = "auracle-desktop"
version = "0.8.11"
description = "Auracle Desktop Launcher — manages the Auracle algorithmic-trading stack"
authors = ["Auracle <contact@aurapointcapital.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SiixQuant/auracle-desktop"
rust-version = "1.77"

[lib]
# Tauri uses cdylib for mobile + dynamic linking on some targets.
# rlib keeps the integration tests buildable.
name = "auracle_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri runtime. v2 is the current major (2025+). The features
# enable: built-in updater, system tray, dialog API, shell command,
# notification, OS-keychain access for license storage.
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"        # docker CLI invocation
tauri-plugin-dialog = "2"       # native dialogs (confirm, file pickers)
tauri-plugin-notification = "2" # native OS notifications
tauri-plugin-updater = "2"      # signed auto-updater
tauri-plugin-opener = "2"       # open URLs in default browser
tauri-plugin-store = "2"        # persistent settings (auto-start, telemetry opt-in)
# Stronghold — IOTA Foundation's libsodium-backed encrypted store.
# Used by secret_store.rs as a more robust alternative to the OS
# keychain for storing API keys + license tokens. Single snapshot
# file in the app data dir, ChaCha20-Poly1305 encryption, machine-
# derived password. See secret_store.rs for the threat model + why
# we picked this over keyring crate.
tauri-plugin-stronghold = "2"
# Direct dep on iota_stronghold so secret_store.rs can call
# `engine::snapshot::try_set_encrypt_work_factor(0)` at startup.
# The plugin re-exports a thin wrapper but not the snapshot module;
# we need the inner crate to disable scrypt key-strengthening on
# snapshot writes. Safe to disable because our snapshot password is
# a 256-bit SHA-256-derived key, not a user-typed weak password —
# scrypt strengthening only buys security on the latter (and on
# slow hardware it was costing 1–40s per save). Mirrors what
# iota_stronghold's own test suite does. Pin to the same version
# tauri-plugin-stronghold 2.3.x picks transitively so we share one
# copy of the crate (no duplicate symbols, no version skew).
iota_stronghold = "2.1"

# Async runtime. Tauri 2 ships its own tokio integration but we keep
# tokio explicit for the long-running healthcheck poll.
tokio = { version = "1", features = ["full"] }

# Serialization for IPC payloads + Docker JSON output parsing.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for hitting Houston /healthz and the GitHub Releases
# update manifest. reqwest with rustls-tls so we don't need OpenSSL
# on the build host.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging — file-rotating logs in the launcher's data dir so the
# Diagnostics view can show the last N days when investigating
# a customer's install issue.
log = "0.4"
env_logger = "0.11"

# OS keychain (Keychain on macOS, Credential Manager on Windows,
# Secret Service on Linux) for license-key storage. We never write
# the plaintext license to disk — keychain only.
keyring = "3"

# Anyhow for ergonomic error propagation through commands. Tauri
# commands return Result<T, String> so we map anyhow errors to
# strings at the boundary.
anyhow = "1"
thiserror = "1"

# Time formatting for log lines + healthcheck timestamps.
chrono = { version = "0.4", features = ["serde"] }

# URL parsing — used by the IBKR-login command to validate the URL
# passed from the frontend before handing it to the WebviewWindow
# builder (which would otherwise accept a garbage string + spawn a
# blank window). `url` is already a transitive dep of tauri/reqwest;
# pinning it directly keeps the API surface stable for our code.
url = "2"

# Process-global state initialized lazily — Forge uses this for
# the single cancel handle shared between the chat-stream task
# (waiter) and the forge_chat_cancel command (notifier). Could be
# done with OnceLock from std but we already pull in many crates
# that re-export once_cell transitively; pinning it explicitly
# keeps the import path stable.
once_cell = "1.20"

# Percent-encode rel_path segments before they hit Houston's REST
# URL — strategy filenames legitimately contain spaces, plus, and
# other URL-significant characters. Tiny dependency (~5 KB), no
# transitive bloat.
urlencoding = "2"

# secret_store.rs deps. SHA-256 hashes the Stronghold password into
# a fixed-size key; machine-uid pulls a stable per-machine
# identifier (used as entropy for the password derivation);
# uuid generates the per-install random suffix that's mixed into
# the password so reinstalls produce a fresh vault.
sha2 = "0.10"
machine-uid = "0.5"
uuid = { version = "1.10", features = ["v4"] }

[features]
# Default features omit the built-in dev-tools surface. Enable in
# CI for debug builds: cargo build --features devtools
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.release]
# Strip debug symbols + LTO for the smallest binary. The launcher
# target is ~10-15 MB per the architecture plan; lto + opt-level=z
# typically halve a Rust binary.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
